jenkins file updated.

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -117,6 +117,7 @@ Jenkins
                     subject: "Build ${env.JOB_NAME} #${env.BUILD_NUMBER} - ${buildStatus}",
                     body: emailBody,
                     mimeType: 'text/plain'
+                    from: "ps-tools@wavemaker.com"
                 )
             }
         }
