jenkins file updated.

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -63,6 +63,14 @@ pipeline {
                             // Publish JUnit results
                             if (fileExists('utreports/junit.xml')) {
                                 junit 'utreports/junit.xml'
+                                 publishHTML([
+                allowMissing: false,
+                alwaysLinkToLastBuild: true,
+                keepAll: true,
+                reportDir: 'utreports',
+                reportFiles: 'index.html',
+                reportName: 'Unit Test Coverage Report'
+            ])
                             }
                         }
                     }
@@ -103,6 +111,8 @@ pipeline {
     <p><b>Build Status:</b> ${buildStatus}</p>
     <p><b>Job:</b> ${env.JOB_NAME} #${env.BUILD_NUMBER}</p>
     <p><b>Jenkins URL:</b> <a href="${env.BUILD_URL}">${env.BUILD_URL}</a></p>
+    <p><b>🧪 Unit Test Report:</b> <a href="${env.BUILD_URL}HTML_20Report_20Unit_20Test_20Report/">View Report</a></p>
+    <p><b>📊 Coverage Report:</b> <a href="${env.BUILD_URL}/artifact/utreports/index.html">View Coverage</a></p>
     <p><b>Coverage Status:</b> ${coverageStatus}</p>
     <br>
     <p>Thanks,<br>Jenkins</p>
