--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,14 +45,14 @@ pipeline {
                             // Archive HTML report
                             if (fileExists('utreports/index.html')) {
                                 archiveArtifacts artifacts: 'utreports/**/*', fingerprint: true
-                                publishHTML(target: [
-                                    allowMissing: true,
-                                    keepAll: true,
-                                    alwaysLinkToLastBuild: true,
-                                    reportDir: 'utreports',
-                                    reportFiles: 'index.html',
-                                    reportName: '🧪 Unit Test Report'
-                                ])
+                           publishHTML([
+      reportDir: 'utreports',
+      reportFiles: 'test-report.html',
+      reportName: '🧪 Jest Test Report',
+      allowMissing: false,
+      alwaysLinkToLastBuild: true,
+      keepAll: true
+    ])
                             }
 
                             // Archive coverage
