--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,6 +38,11 @@ pipeline {
                 echo "📦 Installing Jest dependencies..."
                 npm install --registry=https://registry.npmjs.org/ --save-dev jest-environment-jsdom jest-junit jest-html-reporter
             '''
+
+            sh '''
+wm-ut-gen generate --path=${TEST_PATH}
+
+            '''
                     sh '''
                         npm install --registry=https://registry.npmjs.org/ --save-dev jest-junit
                 chmod +x /Users/pavank_500328/.jenkins/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/node25/bin/wm-ut-gen
