--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     tools {
         jdk 'java17'
         maven 'maven3'
-        nodejs 'node25'
+        nodejs 'node20'
     }
 
     environment {
@@ -41,7 +41,7 @@ pipeline {
             cd /Users/pavank_500328/Downloads/llm-test-gen
             npm install --registry=https://registry.npmjs.org/
             echo "🧪 Generating test files in manual mode..."
-            yes 1 | node ./bin/cli.js generate --path=${TEST_PATH}
+            yes 1 | wm-ut-gen generate generate --path=${TEST_PATH}
         '''
     }
 }
