--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             cd /Users/pavank_500328/Downloads/llm-test-gen
             npm install --registry=https://registry.npmjs.org/
             echo "🧪 Generating test files in manual mode..."
-            yes 1 | wm-ut-gen generate generate --path=${TEST_PATH}
+            yes 1 | node /Users/pavank_500328/Downloads/llm-test-gen/bin/cli.js generate --path=${TEST_PATH}
         '''
     }
 }
