Deleted Jest Confid file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -57,8 +57,9 @@ pipeline {
 
                     sh '''
                         npm install --registry=https://registry.npmjs.org/ --save-dev jest-junit
-                chmod +x /Users/pavank_500328/.jenkins/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/node20/bin/wm-ut-gen
-                wm-ut-gen run-tests --path=${TEST_PATH} || true
+               echo "🧪 Running tests using local CLI..."
+node /Users/pavank_500328/Downloads/llm-test-gen/bin/cli.js run-tests --path=${TEST_PATH} || true
+
                     '''
                 }
             }
